// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination component Renders 5 buttons and 2 dots if the active page is in the center 1`] = `
<Pagination
  className=""
  page={10}
  pages={34}
  setPage={[Function]}
>
  <nav
    className="pagination"
    data-test="pagination"
  >
    <ul
      className="pagination-list"
    >
      <li
        className="pagination-item"
      >
        <button
          className="pagination-button"
          data-test="pagination-chevron-left"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <ForwardRef(SvgChevronLeft)
            className="pagination-chevron"
          >
            <svg
              className="pagination-chevron"
            >
              chevron-left.svg
            </svg>
          </ForwardRef(SvgChevronLeft)>
        </button>
      </li>
      <li
        className="pagination-item"
        key="0"
      >
        <button
          className="pagination-button"
          data-test="pagination-button"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          1
        </button>
      </li>
      <li
        className="pagination-item"
        key="1"
      >
        <button
          className="pagination-button pagination-button-disabled"
          data-test="pagination-dots"
          disabled={true}
          type="button"
        >
          ...
        </button>
      </li>
      <li
        className="pagination-item"
        key="2"
      >
        <button
          className="pagination-button"
          data-test="pagination-button"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          9
        </button>
      </li>
      <li
        className="pagination-item"
        key="3"
      >
        <button
          className="pagination-button pagination-button-active"
          data-test="pagination-button"
          disabled="active"
          onClick={[Function]}
          type="button"
        >
          10
        </button>
      </li>
      <li
        className="pagination-item"
        key="4"
      >
        <button
          className="pagination-button"
          data-test="pagination-button"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          11
        </button>
      </li>
      <li
        className="pagination-item"
        key="5"
      >
        <button
          className="pagination-button pagination-button-disabled"
          data-test="pagination-dots"
          disabled={true}
          type="button"
        >
          ...
        </button>
      </li>
      <li
        className="pagination-item"
        key="6"
      >
        <button
          className="pagination-button"
          data-test="pagination-button"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          34
        </button>
      </li>
      <li
        className="pagination-item"
      >
        <button
          className="pagination-button"
          data-test="pagination-chevron-right"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <ForwardRef(SvgChevronRight)
            className="pagination-chevron"
          >
            <svg
              className="pagination-chevron"
            >
              chevron-right.svg
            </svg>
          </ForwardRef(SvgChevronRight)>
        </button>
      </li>
    </ul>
  </nav>
</Pagination>
`;

exports[`Pagination component Renders 5 buttons, dots and 1 button if there more then 6 pages 1`] = `
<Pagination
  className=""
  page={1}
  pages={7}
  setPage={[Function]}
>
  <nav
    className="pagination"
    data-test="pagination"
  >
    <ul
      className="pagination-list"
    >
      <li
        className="pagination-item"
      >
        <button
          className="pagination-button pagination-button-disabled"
          data-test="pagination-chevron-left"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <ForwardRef(SvgChevronLeft)
            className="pagination-chevron"
          >
            <svg
              className="pagination-chevron"
            >
              chevron-left.svg
            </svg>
          </ForwardRef(SvgChevronLeft)>
        </button>
      </li>
      <li
        className="pagination-item"
        key="0"
      >
        <button
          className="pagination-button pagination-button-active"
          data-test="pagination-button"
          disabled="active"
          onClick={[Function]}
          type="button"
        >
          1
        </button>
      </li>
      <li
        className="pagination-item"
        key="1"
      >
        <button
          className="pagination-button"
          data-test="pagination-button"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          2
        </button>
      </li>
      <li
        className="pagination-item"
        key="2"
      >
        <button
          className="pagination-button"
          data-test="pagination-button"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          3
        </button>
      </li>
      <li
        className="pagination-item"
        key="3"
      >
        <button
          className="pagination-button"
          data-test="pagination-button"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          4
        </button>
      </li>
      <li
        className="pagination-item"
        key="4"
      >
        <button
          className="pagination-button"
          data-test="pagination-button"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          5
        </button>
      </li>
      <li
        className="pagination-item"
        key="5"
      >
        <button
          className="pagination-button pagination-button-disabled"
          data-test="pagination-dots"
          disabled={true}
          type="button"
        >
          ...
        </button>
      </li>
      <li
        className="pagination-item"
        key="6"
      >
        <button
          className="pagination-button"
          data-test="pagination-button"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          7
        </button>
      </li>
      <li
        className="pagination-item"
      >
        <button
          className="pagination-button"
          data-test="pagination-chevron-right"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <ForwardRef(SvgChevronRight)
            className="pagination-chevron"
          >
            <svg
              className="pagination-chevron"
            >
              chevron-right.svg
            </svg>
          </ForwardRef(SvgChevronRight)>
        </button>
      </li>
    </ul>
  </nav>
</Pagination>
`;

exports[`Pagination component Renders 6 buttons in a row if there are less then 7 pages 1`] = `
<Pagination
  className=""
  page={1}
  pages={6}
  setPage={[Function]}
>
  <nav
    className="pagination"
    data-test="pagination"
  >
    <ul
      className="pagination-list"
    >
      <li
        className="pagination-item"
      >
        <button
          className="pagination-button pagination-button-disabled"
          data-test="pagination-chevron-left"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <ForwardRef(SvgChevronLeft)
            className="pagination-chevron"
          >
            <svg
              className="pagination-chevron"
            >
              chevron-left.svg
            </svg>
          </ForwardRef(SvgChevronLeft)>
        </button>
      </li>
      <li
        className="pagination-item"
        key="0"
      >
        <button
          className="pagination-button pagination-button-active"
          data-test="pagination-button"
          disabled="active"
          onClick={[Function]}
          type="button"
        >
          1
        </button>
      </li>
      <li
        className="pagination-item"
        key="1"
      >
        <button
          className="pagination-button"
          data-test="pagination-button"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          2
        </button>
      </li>
      <li
        className="pagination-item"
        key="2"
      >
        <button
          className="pagination-button"
          data-test="pagination-button"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          3
        </button>
      </li>
      <li
        className="pagination-item"
        key="3"
      >
        <button
          className="pagination-button"
          data-test="pagination-button"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          4
        </button>
      </li>
      <li
        className="pagination-item"
        key="4"
      >
        <button
          className="pagination-button"
          data-test="pagination-button"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          5
        </button>
      </li>
      <li
        className="pagination-item"
        key="5"
      >
        <button
          className="pagination-button"
          data-test="pagination-button"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          6
        </button>
      </li>
      <li
        className="pagination-item"
      >
        <button
          className="pagination-button"
          data-test="pagination-chevron-right"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <ForwardRef(SvgChevronRight)
            className="pagination-chevron"
          >
            <svg
              className="pagination-chevron"
            >
              chevron-right.svg
            </svg>
          </ForwardRef(SvgChevronRight)>
        </button>
      </li>
    </ul>
  </nav>
</Pagination>
`;

exports[`Pagination component Renders first page, dots and 5 buttons if the active page is in the end 1`] = `
<Pagination
  className=""
  page={33}
  pages={34}
  setPage={[Function]}
>
  <nav
    className="pagination"
    data-test="pagination"
  >
    <ul
      className="pagination-list"
    >
      <li
        className="pagination-item"
      >
        <button
          className="pagination-button"
          data-test="pagination-chevron-left"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <ForwardRef(SvgChevronLeft)
            className="pagination-chevron"
          >
            <svg
              className="pagination-chevron"
            >
              chevron-left.svg
            </svg>
          </ForwardRef(SvgChevronLeft)>
        </button>
      </li>
      <li
        className="pagination-item"
        key="0"
      >
        <button
          className="pagination-button"
          data-test="pagination-button"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          1
        </button>
      </li>
      <li
        className="pagination-item"
        key="1"
      >
        <button
          className="pagination-button pagination-button-disabled"
          data-test="pagination-dots"
          disabled={true}
          type="button"
        >
          ...
        </button>
      </li>
      <li
        className="pagination-item"
        key="2"
      >
        <button
          className="pagination-button"
          data-test="pagination-button"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          30
        </button>
      </li>
      <li
        className="pagination-item"
        key="3"
      >
        <button
          className="pagination-button"
          data-test="pagination-button"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          31
        </button>
      </li>
      <li
        className="pagination-item"
        key="4"
      >
        <button
          className="pagination-button"
          data-test="pagination-button"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          32
        </button>
      </li>
      <li
        className="pagination-item"
        key="5"
      >
        <button
          className="pagination-button pagination-button-active"
          data-test="pagination-button"
          disabled="active"
          onClick={[Function]}
          type="button"
        >
          33
        </button>
      </li>
      <li
        className="pagination-item"
        key="6"
      >
        <button
          className="pagination-button"
          data-test="pagination-button"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          34
        </button>
      </li>
      <li
        className="pagination-item"
      >
        <button
          className="pagination-button"
          data-test="pagination-chevron-right"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <ForwardRef(SvgChevronRight)
            className="pagination-chevron"
          >
            <svg
              className="pagination-chevron"
            >
              chevron-right.svg
            </svg>
          </ForwardRef(SvgChevronRight)>
        </button>
      </li>
    </ul>
  </nav>
</Pagination>
`;
